Add integration tests.